Feature/clean swipe func (#135)
* - added repo metod, as well as api endpoint, to get the id of all liked projects on azureToken parameter (tested as well)
-added a state container - a class - in which it holds shared data between the swipe and navmenu pages. the navmenu listens to changes, and re renders the page pased on changes to likedProjects.
- state container added as singleton service.

* - minor changes

* - add type parameter to keyword repo on ReadProjectGivenKeywordAndTimesSeenAsync
-tested repo, controller and integration
- also cleaned a little up in the CheckClick method in Swipe.razor

* - help

* fix browse with degree

* fix fact error

Co-authored-by: Carl <carl99@live.dk>
Co-authored-by: Carlbrr <90042145+Carlbrr@users.noreply.github.com>
Co-authored-by: Niclas Søgaard Hjortkjær <nihj@itu.dk>

--- a/ProjectBank/Client/Pages/Browse.razor
+++ b/ProjectBank/Client/Pages/Browse.razor
@@ -32,12 +32,12 @@
                     <div>
                         <InputRadioGroup @bind-Value="model.Selected">
                             @foreach (var option in model.Options)
-                                {
+                            {
                                 <div>
                                     <InputRadio  Value="option.Value" id="@option.Value" style="outline: none; border: none;"/> 
                                         <label for="@option.Value" style="cursor: pointer">@option.Value</label>
                                 </div>
-                                }
+                            }
                         </InputRadioGroup>
                     </div>
                 </EditForm>
@@ -85,11 +85,11 @@
     
     private void redirectToSwipePage(string keyword)
     {
-        navigationManager.NavigateTo("swipe/"+keyword);
+        navigationManager.NavigateTo($"swipe/{keyword}/{(int) model.Selected}");
     }
     private void redirectToSwipeAllPage()
     {
-        navigationManager.NavigateTo("swipe/all");
+        navigationManager.NavigateTo($"swipe/all/{(int) model.Selected}");
     }
 
 
