--- a/ProjectBank/Client/Pages/Swipe.razor
+++ b/ProjectBank/Client/Pages/Swipe.razor
@@ -1,4 +1,4 @@
-@page "/swipe/{keyword}"
+@page "/swipe/{keyword}/{degreeInt:int}"
 @inject HttpClient Http
 @using System.Security.Claims
 @inject AuthenticationStateProvider AuthenticationStateProvider
@@ -63,13 +63,17 @@ Degree: @_currentProject.Degree</textarea>
 {
     [Parameter]
     public string? keyword { get; set; }
+    
+    [Parameter]
+    public int? degreeInt { get; set; } = 3;
+    
     private readonly IKeywordFinder keywordFinder = new KeywordFinder();
     private const int _i = 10;
-    private int _indexCounter = 1;
+    private int _indexCounter;
     private List<int> _likedProjectIds; //This is only used to mimic the database collection of saved projects, st. we dont have to do unnecessary API calls. 
     private Stack<int> _seenProjectIds = new Stack<int>();
     private int _countOfProjects;
-
+    private Degree _degree = Degree.Unspecified;
     private ProjectDetailsDto _currentProject;
     private ClickType _lastClick;
     private ClaimsPrincipal? _user;
@@ -85,19 +89,24 @@ Degree: @_currentProject.Degree</textarea>
     
     protected override async Task OnInitializedAsync()
     {
+        _degree = (Degree) degreeInt;
+
         try
-        {
+        {      
             if (keyword == "all"){
-                await keywordFinder.Setup(Http);
-                _currentProject = await Http.GetFromJsonAsync<ProjectDetailsDto>($"/api/Project/1");
+                await keywordFinder.Setup(Http, _degree);
+                
+                var nextKeyword = keywordFinder.FindWeightedRandomKeyword();
+                _currentProject = await keywordFinder.ReadProjectGivenKeywordAsync(nextKeyword);
             } else
             {                
-                _currentProject = await Http.GetFromJsonAsync<ProjectDetailsDto>($"/api/Keyword/{keyword}/{_indexCounter}");
+                _currentProject = await Http.GetFromJsonAsync<ProjectDetailsDto>($"/api/Keyword/typeOption/{keyword}/{_indexCounter}/{_degree}");
                 _countOfProjects = await Http.GetFromJsonAsync<int>($"/api/Keyword/count/{keyword}");
             }
 
             _seenProjectIds.Push(_currentProject.Id);
-            
+            _indexCounter++;
+
             _user = (await AuthenticationStateProvider.GetAuthenticationStateAsync()).User;
             _aToken = _user.FindFirst(c => c.Type.Contains("aud"))?.Value;
             _likedProjectIds = await Http.GetFromJsonAsync<List<int>>($"/api/Account/likedProduct/{_aToken}"); //will return an empty list, if found no saved projects for that user.
@@ -110,6 +119,9 @@ Degree: @_currentProject.Degree</textarea>
         } catch (AccessTokenNotAvailableException e)
         {
             e.Redirect();
+        } catch (System.Text.Json.JsonException)
+        {
+
         }
     }
 
@@ -128,60 +140,44 @@ Degree: @_currentProject.Degree</textarea>
             
                 if (!_likedProjectIds.Contains(_currentProject.Id))
                 {
-                    await Http.PostAsJsonAsync($"api/Account/{_aToken}", _currentProject.Title); //vil måske gerne lave om til den også får et id
-                    _likedProjectIds.Add(_currentProject.Id);
-                    projectChanged.AddSavedProjects(_currentProject.Title);
-                    
-                    ShowNotification("Project added: "+_currentProject.Title, Notification.Success);
-                    
+                    await addLikedProject();
                     if (keyword == "all") 
                     {
                         await UpdateRatios(true);
                     }
-                    
                 } else
                 {
                     ShowNotification("You had already liked project: " + _currentProject.Title, Notification.Info); 
                 }
 
-                
-                if (_indexCounter < _countOfProjects)
-                {
-                    _indexCounter++;
-                } else
-                {
-                    ShowNotification("No more projects to show. Rewatch to see projects again, or pick a new keyword", Notification.Error);
-                }
-
                 _lastClick = ClickType.Like;
-
-                if (keyword == "all") 
+                
+                if (keyword == "all")
                 {
-                    var nextKeyword = keywordFinder.FindWeightedRandomKeyword();
-                    var project = await keywordFinder.ReadProjectGivenKeywordAsync(nextKeyword);
-                    
-                    if (project != null){
-                        _currentProject = project;
-                    }
+                    await FindNextProjectAll();
                 } else
                 {
-                    _currentProject = await Http.GetFromJsonAsync<ProjectDetailsDto>($"/api/Keyword/{keyword}/{_indexCounter}");
+                    await FindNextProject();
                 }
-
-                _seenProjectIds.Push(_currentProject.Id);
                 
                 break;
 
             case ClickType.Rewatch:
-                            
+            
                 if (_seenProjectIds.Count() > 1)
                 {
                     var index = _seenProjectIds.Peek();
                     if (_currentProject.Id == index){
                         _seenProjectIds.Pop();
-                        index = _seenProjectIds.Peek();
                     }
-                    _currentProject = await Http.GetFromJsonAsync<ProjectDetailsDto>($"/api/Project/{_seenProjectIds.Pop()}");
+                    if (_seenProjectIds.Count > 2)
+                    {
+                        _currentProject = await Http.GetFromJsonAsync<ProjectDetailsDto>($"/api/Project/{_seenProjectIds.Pop()}");
+                    }
+                    else
+                    {
+                        _currentProject = await Http.GetFromJsonAsync<ProjectDetailsDto>($"/api/Project/{_seenProjectIds.Peek()}");
+                    }
                 } else
                 {
                     _currentProject = await Http.GetFromJsonAsync<ProjectDetailsDto>($"/api/Project/{_seenProjectIds.Peek()}");
@@ -190,10 +186,7 @@ Degree: @_currentProject.Degree</textarea>
 
                 if (_lastClick == ClickType.Like && _likedProjectIds.Contains(_currentProject.Id))
                 {
-                    await Http.PutAsJsonAsync($"api/Account/{_aToken}/remove", _currentProject.Title);
-                    _likedProjectIds.Remove(_currentProject.Id);
-                    projectChanged.RemoveSavedProjects(_currentProject.Title);
-                    ShowNotification("Project removed: "+_currentProject.Title, Notification.Success);
+                    await removeLikedProject();
                 }
                 
                 _lastClick = ClickType.Rewatch;
@@ -204,42 +197,18 @@ Degree: @_currentProject.Degree</textarea>
             
                 if (_likedProjectIds.Contains(_currentProject.Id))
                 {
-                    await Http.PutAsJsonAsync($"api/Account/{_aToken}/remove", _currentProject.Title);
-                    _likedProjectIds.Remove(_currentProject.Id);
-                    projectChanged.RemoveSavedProjects(_currentProject.Title);
-                    ShowNotification("Project removed: " + _currentProject.Title, Notification.Success);
-                }
-
-                if (_indexCounter < _countOfProjects)
-                {
-                    _indexCounter++;
-                } else
-                {
-                    ShowNotification("No more projects to show in this category. You are now browsing all projects", Notification.Error);
-                }
-                _indexCounter++;
-
-                if (keyword == "all")
-                {
-                    await UpdateRatios(false);
+                    await removeLikedProject();
                 }
 
                 _lastClick = ClickType.Dislike;
 
-                if (keyword == "all") 
+                if (keyword == "all")
                 {
-                    var nextKeyword = keywordFinder.FindWeightedRandomKeyword();
-                    var project = await keywordFinder.ReadProjectGivenKeywordAsync(nextKeyword);
-                    
-                    if (project != null){
-                        _currentProject = project;
-                    }
+                    await FindNextProjectAll();
                 } else
                 {
-                    _currentProject = await Http.GetFromJsonAsync<ProjectDetailsDto>($"/api/Keyword/{keyword}/{_indexCounter}");
+                    await FindNextProject();
                 }
-
-                _seenProjectIds.Push(_currentProject.Id);
                 
                 break;
         }
@@ -247,6 +216,32 @@ Degree: @_currentProject.Degree</textarea>
         _keywordString = GetKeyWords();
 
         await InvokeAsync(StateHasChanged);
+    }
+
+    private async Task FindNextProjectAll()
+    {
+        var nextKeyword = keywordFinder.FindWeightedRandomKeyword();
+        var project = await keywordFinder.ReadProjectGivenKeywordAsync(nextKeyword);
+        
+        if (project != null){
+            _currentProject = project;
+        }
+
+        _seenProjectIds.Push(_currentProject.Id);
+    }
+
+    private async Task FindNextProject()
+    {
+        if (_indexCounter < _countOfProjects - 1)
+        {
+            _currentProject = await Http.GetFromJsonAsync<ProjectDetailsDto>($"/api/Keyword/typeOption/{keyword}/{_indexCounter}/{_degree}");
+            _seenProjectIds.Push(_currentProject.Id);
+            _indexCounter++;
+            
+        } else
+        {
+            ShowNotification("No more projects to show. Rewatch to see projects again, or pick a new keyword", Notification.Error);
+        }
     }
 
     private async Task UpdateRatios(bool userLikedProject)
@@ -263,7 +258,6 @@ Degree: @_currentProject.Degree</textarea>
 
     }
     
-
     private void ShowNotification(string message, Notification type)
     {
         var notiMsg = new NotificationMessage();
@@ -289,4 +283,25 @@ Degree: @_currentProject.Degree</textarea>
         notificationService.Notify(notiMsg); 
         
     }
+    
+    //----- private helper methods -----
+
+    private async Task removeLikedProject()
+    {
+        await Http.PutAsJsonAsync($"api/Account/{_aToken}/remove", _currentProject.Title);
+        _likedProjectIds.Remove(_currentProject.Id);
+        projectChanged.RemoveSavedProjects(_currentProject.Title);
+        
+        ShowNotification("Project removed: " + _currentProject.Title, Notification.Success);
+    }
+    
+    private async Task addLikedProject()
+    {
+        await Http.PostAsJsonAsync($"api/Account/{_aToken}", _currentProject.Title); //vil måske gerne lave om til den også får et id, nah fuck it
+        _likedProjectIds.Add(_currentProject.Id);
+        projectChanged.AddSavedProjects(_currentProject.Title);
+                    
+        ShowNotification("Project added: "+_currentProject.Title, Notification.Success);
+    }
+
 }   
