Browse.razor almost mobile friendly

--- a/ProjectBank/Client/Shared/MainLayout.razor.css
+++ b/ProjectBank/Client/Shared/MainLayout.razor.css
@@ -37,8 +37,8 @@ main {
         text-overflow: ellipsis;
     }
 
-@media (max-width: 640.98px) {
-    .top-row:not(.auth) {
+@media (max-width: 767.98px) {
+    .top-row {
         display: none;
     }
 
@@ -51,7 +51,7 @@ main {
     }
 }
 
-@media (min-width: 641px) {
+@media (min-width: 768px) {
     .page {
         flex-direction: row;
     }
