--- a/ProjectBank/Client/Shared/NavMenu.razor
+++ b/ProjectBank/Client/Shared/NavMenu.razor
@@ -49,10 +49,9 @@
             </NavLink>
         </div>
         }
-       
     </nav>
 </div>
-<hr>
+<hr id="nav_line">
 <br>
 <div class="favoriteList">
     
