--- a/ProjectBank/Client/wwwroot/css/browse.css
+++ b/ProjectBank/Client/wwwroot/css/browse.css
@@ -77,3 +77,98 @@
     padding-left: 5px;
   }
   
+  .mobile_filter_btn{
+    display: none;
+    text-align: center;
+    color: #1e2125;
+    background-color: white;
+    border-radius: 5px;
+    height: 2em;
+    width: 5.5em;
+    padding: 0;
+    outline: none;
+    margin: 0;
+    border: none;
+    font-size: 15pt;
+  }
+
+@media (max-width: 575.98px){
+  .grid-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .grid-item{
+    height: 5em;
+    width: 90%;
+    margin-right: 5%;
+    margin-left: 5%;
+    font-size: 20pt;
+    padding: 0;
+  }
+}
+
+/*Small devices (landscape phones, less than 768px)*/
+@media (max-width: 767.98px){
+  .grid-container{
+    display: block;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+  }
+
+  .grid-item{
+    height: 5em;
+    width: 90%;
+    margin-right: 5%;
+    margin-left: 5%;
+    font-size: 20pt;
+    padding: 0;
+  }
+  #Browse_all_text{
+    display: none;
+  }
+  
+  .browse_all{
+    display: flex;
+    margin-left: 5%;
+  }
+  
+  .browse_all_btn{
+    display: block;
+    color: #1e2125;
+    background-color: white;
+    border-radius: 5px;
+    height: 2em;
+    text-decoration: none;
+    width: 5.5em;
+    font-size: 15pt;
+  }
+  
+  .desktop_filter_btn{
+    display: none;
+  }
+  
+  .mobile_filter_btn{
+    display: block;
+  }
+  
+}
+
+/*Medium devices (tablets, portrait view )*/
+@media (max-width: 991.98px){
+  .grid-container{
+    grid-template-columns: 50% 50%;
+  }
+  .grid-item{
+    font-size: 18pt;
+  }
+}
+
+/*Large devices (tablets, landscape view)*/
+@media (max-width: 1199.98px){
+
+}
+
+
