--- a/ProjectBank/Client/_Imports.razor
+++ b/ProjectBank/Client/_Imports.razor
@@ -14,6 +14,8 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using ProjectBank.Client
 @using ProjectBank.Client.Shared
-@using ProjectBank.Core
+@using ProjectBank.Core.DTO
+@using ProjectBank.Core.Enum
+@using ProjectBank.Core.RepositoryInterface
 @using Radzen
 @using Radzen.Blazor
